--- a/app/src/main/res/layout/content_project_list.xml
+++ b/app/src/main/res/layout/content_project_list.xml
@@ -12,4 +12,25 @@
     tools:context="com.example.duri.finalproject.ProjectList"
     tools:showIn="@layout/activity_project_list">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/project_list">
+
+        <!--<Button-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="New Button"-->
+            <!--android:id="@+id/button" />-->
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="+"
+            android:id="@+id/addProject"
+            android:layout_gravity="right"
+            android:textSize="30dp"
+            android:onClick="addProject"/>
+    </LinearLayout>
+
 </RelativeLayout>
