--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,4 +36,13 @@
         android:layout_below="@+id/seekBar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Project List"
+        android:id="@+id/button2"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/webView"
+        android:onClick="projectList"/>
 </RelativeLayout>
