--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/seekBar"
-        android:max="100"
+        android:max="10"
         android:progress="25"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
@@ -27,8 +27,9 @@
         android:layout_height="wrap_content"
         android:text="History"
         android:id="@+id/button"
-        android:layout_below="@+id/seekBar"
-        android:layout_alignParentStart="true" />
+        android:onClick="history"
+        android:layout_alignTop="@+id/button2"
+        android:layout_toEndOf="@+id/button2" />
 
 
     <Button
@@ -36,12 +37,15 @@
         android:layout_height="wrap_content"
         android:text="Live"
         android:id="@+id/button2"
-        android:layout_alignBottom="@+id/button"
-        android:layout_toEndOf="@+id/button" />
+        android:onClick="live"
+        android:layout_below="@+id/seekBar"
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/back"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Medium Text"
         android:id="@+id/textView2"
