--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -44,6 +44,7 @@
     <TextView
         android:layout_marginTop="5dp"
         android:background="@drawable/back"
+        android:scrollbars = "vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
