--- a/app/src/main/res/layout/content_project_overview.xml
+++ b/app/src/main/res/layout/content_project_overview.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Andrew"
+        android:text=""
         android:id="@+id/textView4"
         android:layout_below="@+id/view"
         android:layout_alignParentStart="true" />
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text=""
         android:id="@+id/textView5"
         android:layout_below="@+id/textView4"
         android:layout_alignParentStart="true"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Duri"
+        android:text=""
         android:id="@+id/textView6"
         android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true" />
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text=""
         android:id="@+id/textView7"
         android:layout_below="@+id/textView6"
         android:layout_alignParentStart="true"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Kevin"
+        android:text=""
         android:id="@+id/textView8"
         android:layout_below="@+id/textView7"
         android:layout_alignParentStart="true" />
@@ -80,7 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text=""
         android:id="@+id/textView9"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView8"
